first run of experimental metrics

--- a/dvc.yaml
+++ b/dvc.yaml
@@ -18,3 +18,5 @@ stages:
       - src/text_classification.py
     outs:
       - output/model.joblib
+    metrics:
+      - output/accuracy_scores.json
